@@ -1,4 +1,4 @@
-.TH "sbatch" "1" "SLURM 1.3" "September 2007" "SLURM Commands"
+.TH "sbatch" "1" "SLURM 1.3" "November 2007" "SLURM Commands"
 .SH "NAME"
 .LP 
 sbatch \- Submit a batch script to SLURM.
@@ -641,6 +641,18 @@ Do not allocate a block on Blue Gene systems only.
 .TP
 \fBMPIRUN_NOFREE\fR
 Do not free a block on Blue Gene systems only.
+.TP
+\fBSLURM_NTASKS_PER_CORE\fR
+Number of tasks requested per core.
+Only set if the \fB\-\-ntasks\-per\-core\fR option is specified.
+.TP
+\fBSLURM_NTASKS_PER_NODE\fR
+Number of tasks requested per node.
+Only set if the \fB\-\-ntasks\-per\-node\fR option is specified.
+.TP
+\fBSLURM_NTASKS_PER_SOCKET\fR
+Number of tasks requested per socket.
+Only set if the \fB\-\-ntasks\-per\-socket\fR option is specified.
 .TP
 \fBMPIRUN_PARTITION\fR
 The block name on Blue Gene systems only.
